Fix darkmode toggle making label unreadable

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -38,6 +38,10 @@
     height: 100%;
 }
 
-.back-link {
-    color: var(--link-visited)
+.darkmode-toggle {
+    color: #fff;
+}
+
+.darkmode-toggle--white {
+    color: #000;
 }
